# Cafe

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
resources/shaders/: mainFragment.glsl  mainVertex.glsl
resources/shaders/aabb/: aabbFragment.glsl  aabbVertex.glsl
resources/shaders/terrain/: terrainFragment.glsl  terrainVertex.glsl
src/: Asset.cpp  Asset.h  Atlas.cpp  Atlas.h  Atlas.hpp  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  Cafe.cpp  Cafe.h  Component.cpp  ECS.cpp  ECS.h  Entity.h  Entity.hpp  EntityComponentSystem.cpp  EntityComponentSystem.h  Event.cpp  Event.h  Event.hpp  EventHandler.cpp  EventHandler.hpp  EventHandling.cpp  EventHandling.h  EventHandling.hpp  Frustum.cpp  Frustum.h  Geometry.cpp  Geometry.h  Input.cpp  Input.h  Network.cpp  Network.h  Network.hpp  NetworkController.cpp  NetworkController.hpp  ObjectPool.hpp  Render.cpp  Render.h  Render.hpp  RenderPipeline.cpp  (+5 more)
src/asset/: Asset.h  LoadMaterialAsset.cpp  LoadMeshAsset.cpp  LoadShaderAsset.cpp  MaterialAsset.cpp  MeshAsset.cpp  ShaderAsset.cpp  TextureAsset.cpp
src/deprecated/: Event.cpp  Event.h  EventHandling.cpp  EventHandling.h  Network.cpp  UUIDGenerator.h  _MeshAsset.cpp
src/util/: AABBUtils.cpp  AABBUtils.h  ArrayUtils.h  Image.cpp  Image.h  MapUtils.h  MathUtils.cpp  MathUtils.h  ObjectPool.h  ObjectPool.hpp  StringUtils.h  ThreadSafeQueue.h  TimeUtils.h  Types.h  UUIDGenerator.cpp  UUIDGenerator.h
